--- a/programming/language/python/sip/pspec.xml
+++ b/programming/language/python/sip/pspec.xml
@@ -12,9 +12,11 @@
         <IsA>app:console</IsA>
         <Summary>SIP is a tool for generating bindings for C++ classes so that they can be used by Python</Summary>
         <Description>SIP is a tool for generating bindings for C and C++ libraries so that they can be used by Python. It takes any C or C++ libraries and converts them into Python extension modules.</Description>
-        <Archive sha1sum="ca9fd7760f33ec1b09ae6732e5f708037fcdd23b" type="targz">http://www.riverbankcomputing.co.uk/static/Downloads/sip4/sip-4.10.2.tar.gz</Archive>
+        <Archive sha1sum="586a86a55553617e39b1df8376166d03d697184c" type="targz">http://www.riverbankcomputing.co.uk/static/Downloads/sip4/sip-4.11.2.tar.gz</Archive>
         <Patches>
             <Patch level="1">no-strip.patch</Patch>
+            <Patch>disable-rpaths.diff</Patch>
+            <Patch>fix-linking.diff</Patch>
         </Patches>
     </Source>
 
@@ -28,6 +30,13 @@
         </Files>
     </Package>
     <History>
+        <Update release="38">
+            <Date>2010-11-04</Date>
+            <Version>4.11.2</Version>
+            <Comment>Version bump</Comment>
+            <Name>Ozan Çağlayan</Name>
+            <Email>ozan@pardus.org.tr</Email>
+        </Update>
         <Update release="37">
             <Date>2010-10-26</Date>
             <Version>4.10.2</Version>
