--- a/corporate2/devel/programming/language/python/PyQt3/pspec.xml
+++ b/corporate2/devel/programming/language/python/PyQt3/pspec.xml
@@ -16,7 +16,7 @@
         <Archive sha1sum="310c17bd3b0f81f8b516c5b755250171fa9c9a04" type="targz">http://www.riverbankcomputing.co.uk/static/Downloads/PyQt3/PyQt-x11-gpl-3.18.1.tar.gz</Archive>
         <BuildDependencies>
             <Dependency>qt3</Dependency>
-            <Dependency versionFrom="4.10.2">sip</Dependency>
+            <Dependency versionFrom="4.11.2">sip</Dependency>
             <Dependency>qscintilla</Dependency>
         </BuildDependencies>
     </Source>
@@ -25,7 +25,7 @@
         <Name>PyQt3</Name>
         <RuntimeDependencies>
             <Dependency>qt3</Dependency>
-            <Dependency versionFrom="4.10.2">sip</Dependency>
+            <Dependency versionFrom="4.11.2">sip</Dependency>
             <Dependency>qscintilla</Dependency>
         </RuntimeDependencies>
         <Files>
@@ -37,6 +37,13 @@
     </Package>
 
     <History>
+        <Update release="18">
+            <Date>2010-11-04</Date>
+            <Version>3.18.1</Version>
+            <Comment>Strictly depend on the new sip</Comment>
+            <Name>Ozan Çağlayan</Name>
+            <Email>ozan@pardus.org.tr</Email>
+        </Update>
         <Update release="17">
             <Date>2010-10-26</Date>
             <Version>3.18.1</Version>
