Strictly depend on the new sip

--- a/corporate2/devel/programming/language/python/PyKDE3/pspec.xml
+++ b/corporate2/devel/programming/language/python/PyKDE3/pspec.xml
@@ -14,9 +14,9 @@
         <Description>PyKDE3 is a set of Python bindings for the KDE desktop environment.</Description>
         <Archive sha1sum="6c6b748cc0deb832ccdd3121e5335764002a5deb" type="tarbz2">http://www.riverbankcomputing.com/static/Downloads/PyKDE3/PyKDE-3.16.7.tar.bz2</Archive>
         <BuildDependencies>
-            <Dependency>sip</Dependency>
             <Dependency>PyQt3</Dependency>
             <Dependency>kdelibs</Dependency>
+            <Dependency versionFrom="4.11.2">sip</Dependency>
         </BuildDependencies>
         <Patches>
             <!-- http://lists.kde.org/?l=pykde&m=116277404914939&w=2 -->
@@ -30,6 +30,7 @@
             <Dependency>sip</Dependency>
             <Dependency>PyQt3</Dependency>
             <Dependency>kdelibs</Dependency>
+            <Dependency versionFrom="4.11.2">sip</Dependency>
         </RuntimeDependencies>
         <Files>
             <Path fileType="executable">/usr/bin</Path>
@@ -41,6 +42,13 @@
     </Package>
 
     <History>
+        <Update release="17">
+            <Date>2010-11-04</Date>
+            <Version>3.16.7</Version>
+            <Comment>Strictly depend on the new sip</Comment>
+            <Name>Ozan Çağlayan</Name>
+            <Email>ozan@pardus.org.tr</Email>
+        </Update>
         <Update release="16">
             <Date>2010-10-26</Date>
             <Version>3.16.7</Version>
