--- a/programming/language/python/PyKDEeXtensions/pspec.xml
+++ b/programming/language/python/PyKDEeXtensions/pspec.xml
@@ -14,7 +14,7 @@
         <Description>PyKDE is a set of Python bindings for the KDE desktop environment. With these bindings you can use the KDE libraries in your Python programs.</Description>
         <Archive sha1sum="c8e3dc678168bdbf1d42256399d3b1f95ba39c47" type="targz">http://www.simonzone.com/software/pykdeextensions/pykdeextensions-0.4.0.tar.gz</Archive>
         <BuildDependencies>
-            <Dependency>sip</Dependency>
+            <Dependency versionFrom="4.11.2">sip</Dependency>
             <Dependency>PyQt3</Dependency>
             <Dependency>PyKDE3</Dependency>
             <Dependency>kdelibs</Dependency>
@@ -36,10 +36,10 @@
     <Package>
         <Name>PyKDEeXtensions</Name>
         <RuntimeDependencies>
-            <Dependency>sip</Dependency>
             <Dependency>PyQt3</Dependency>
             <Dependency>PyKDE3</Dependency>
             <Dependency>kdelibs</Dependency>
+            <Dependency versionFrom="4.11.2">sip</Dependency>
         </RuntimeDependencies>
         <Files>
             <Path fileType="header">/usr/kde/3.5/include</Path>
@@ -52,6 +52,13 @@
     </Package>
 
     <History>
+        <Update release="13">
+            <Date>2010-11-04</Date>
+            <Version>0.4.0</Version>
+            <Comment>Strictly depend on the new sip</Comment>
+            <Name>Ozan Çağlayan</Name>
+            <Email>ozan@pardus.org.tr</Email>
+        </Update>
         <Update release="12">
             <Date>2010-10-26</Date>
             <Version>0.4</Version>
