Strictly depend on the new sip

--- a/corporate2/devel/programming/language/python/pyqtermwidget/pspec.xml
+++ b/corporate2/devel/programming/language/python/pyqtermwidget/pspec.xml
@@ -16,8 +16,8 @@
         <BuildDependencies>
             <Dependency versionFrom="4.6.2">qt-devel</Dependency>
             <Dependency>PyQt</Dependency>
-            <Dependency>sip</Dependency>
             <Dependency>qtermwidget-devel</Dependency>
+            <Dependency versionFrom="4.11.2">sip</Dependency>
         </BuildDependencies>
         <Patches>
             <Patch level="1">addStartShell.patch</Patch>
@@ -29,8 +29,8 @@
         <RuntimeDependencies>
             <Dependency>qt</Dependency>
             <Dependency>PyQt</Dependency>
-            <Dependency>sip</Dependency>
             <Dependency>qtermwidget</Dependency>
+            <Dependency versionFrom="4.11.2">sip</Dependency>
         </RuntimeDependencies>
         <Files>
             <Path fileType="executable">/usr/bin</Path>
@@ -41,6 +41,13 @@
     </Package>
 
     <History>
+        <Update release="5">
+            <Date>2010-11-04</Date>
+            <Version>0.1.2</Version>
+            <Comment>Strictly depend on the new sip</Comment>
+            <Name>Ozan Çağlayan</Name>
+            <Email>ozan@pardus.org.tr</Email>
+        </Update>
         <Update release="4">
             <Date>2010-10-26</Date>
             <Version>0.1.2</Version>
