--- a/corporate2/devel/programming/language/python/PyQt/pspec.xml
+++ b/corporate2/devel/programming/language/python/PyQt/pspec.xml
@@ -13,12 +13,12 @@
         <IsA>library</IsA>
         <Summary>A set of Python bindings for the Qt 4.x Toolkit</Summary>
         <Description>Qt is a set of C++ libraries and development tools that includes platform independent abstractions for graphical user interfaces, networking, threads, Unicode, regular expressions, SQL databases, SVG, OpenGL, XML, and user and application settings. PyQt implements 440 of these classes as a set of Python modules.</Description>
-        <Archive sha1sum="7ad7ed37509f13b4975c50f5fbf557bd58815558" type="targz">http://www.riverbankcomputing.co.uk/static/Downloads/PyQt4/PyQt-x11-gpl-4.7.3.tar.gz</Archive>
+        <Archive sha1sum="e064ed38817bafde72f2a57679d80d40c7015afb" type="targz">http://www.riverbankcomputing.co.uk/static/Downloads/PyQt4/PyQt-x11-gpl-4.8.1.tar.gz</Archive>
         <BuildDependencies>
             <Dependency versionFrom="4.7.0">qt-webkit</Dependency>
             <Dependency versionFrom="4.7.0">qt-devel</Dependency>
             <Dependency versionFrom="4.4.1">phonon</Dependency>
-            <Dependency versionFrom="4.10.2">sip</Dependency>
+            <Dependency versionFrom="4.11.2">sip</Dependency>
         </BuildDependencies>
         <Patches>
             <Patch>add_gettext_support.patch</Patch>
@@ -28,7 +28,7 @@
     <Package>
         <Name>PyQt</Name>
         <RuntimeDependencies>
-            <Dependency versionFrom="4.10.2">sip</Dependency>
+            <Dependency versionFrom="4.11.2">sip</Dependency>
             <Dependency versionFrom="4.7.0">qt</Dependency>
         </RuntimeDependencies>
         <Files>
@@ -90,6 +90,13 @@
     </Package>
 
     <History>
+        <Update release="46">
+            <Date>2010-11-04</Date>
+            <Version>4.8.1</Version>
+            <Comment>Version bump to 4.8.1.</Comment>
+            <Name>Ozan Çağlayan</Name>
+            <Email>ozan@pardus.org.tr</Email>
+        </Update>
         <Update release="45">
             <Date>2010-11-04</Date>
             <Version>4.7.3</Version>
