--- a/corporate2/devel/programming/language/perl/perl-pcsc/pspec.xml
+++ b/corporate2/devel/programming/language/perl/perl-pcsc/pspec.xml
@@ -12,9 +12,9 @@
         <IsA>library</IsA>
         <Summary>Perl wrapper for communicating with a smart card using PC/SC</Summary>
         <Description>perl-pcsc is a library which allows to communicate with a smart card using PC/SC (Microsoft version or pcsc-lite for Unixes) from a Perl script.</Description>
-        <Archive sha1sum="0a283dd8be9924e4c04ca9253473461da41f1abc" type="targz">http://ludovic.rousseau.free.fr/softwares/pcsc-perl/pcsc-perl-1.4.8.tar.gz</Archive>
+        <Archive sha1sum="3774e10e99dec6c77933357a937b7a2eafcfcfa7" type="tarbz2">http://ludovic.rousseau.free.fr/softwares/pcsc-perl/pcsc-perl-1.4.11.tar.bz2</Archive>
         <BuildDependencies>
-            <Dependency>pcsc-lite</Dependency>
+            <Dependency>pcsc-lite-devel</Dependency>
             <Dependency versionFrom="5.10.1">perl</Dependency>
         </BuildDependencies>
     </Source>
@@ -33,6 +33,13 @@
     </Package>
 
     <History>
+        <Update release="6">
+            <Date>2010-11-10</Date>
+            <Version>1.4.11</Version>
+            <Comment>Version bump</Comment>
+            <Name>Ozan Çağlayan</Name>
+            <Email>ozan@pardus.org.tr</Email>
+        </Update>
         <Update release="5">
             <Date>2010-10-26</Date>
             <Version>1.4.8</Version>
