--- a/programming/language/python/pardus-desktop-services/pspec.xml
+++ b/programming/language/python/pardus-desktop-services/pspec.xml
@@ -12,7 +12,7 @@
         <IsA>library</IsA>
         <Summary>Pardus Desktop Services</Summary>
         <Description>pardus-desktop-services is a wrapper python module for integrating various desktop environments using PyQt.</Description>
-        <Archive sha1sum="413d6740db7c6dc5a3e9e7a0bb91f569414d9e25" type="targz">http://cekirdek.pardus.org.tr/~gokmen/files/pds-1.0.1.tar.gz</Archive>
+        <Archive sha1sum="c8251824f761cee92f857f5aa159596c24a72da8" type="targz">http://cekirdek.pardus.org.tr/~gokmen/files/pds-1.2.0.tar.gz</Archive>
         <BuildDependencies>
             <Dependency>PyQt</Dependency>
         </BuildDependencies>
@@ -30,6 +30,19 @@
     </Package>
 
     <History>
+        <Update release="5">
+            <Date>2010-11-12</Date>
+            <Version>1.2.0</Version>
+            <Comment>
+                - New version
+                - New module QProgressIndicator added
+                - New module PThread added
+                - New module PApplicationContainer added
+                - New test module added for Pds.Gui
+            </Comment>
+            <Name>Gökmen GÖKSEL</Name>
+            <Email>gokmen@pardus.org.tr</Email>
+        </Update>
         <Update release="4">
             <Date>2010-10-26</Date>
             <Version>1.0.1</Version>
