Depend on mit-kerberos-devel

--- a/corporate2/devel/programming/language/perl/perl-GSSAPI/pspec.xml
+++ b/corporate2/devel/programming/language/perl/perl-GSSAPI/pspec.xml
@@ -14,7 +14,7 @@
         <Description>perl-GSSAPI module gives access to the routines of the GSSAPI library, as described in rfc2743 and rfc2744 and implemented by the Kerberos-1.2 distribution from MIT.</Description>
         <Archive sha1sum="c857485532e92e266a75b56ed247284f94b2d3d4" type="targz">mirrors://cpan/authors/id/A/AG/AGROLMS/GSSAPI-0.28.tar.gz</Archive>
         <BuildDependencies>
-            <Dependency>mit-kerberos</Dependency>
+            <Dependency>mit-kerberos-devel</Dependency>
             <Dependency versionFrom="5.10.1">perl</Dependency>
         </BuildDependencies>
     </Source>
@@ -22,7 +22,7 @@
     <Package>
         <Name>perl-GSSAPI</Name>
         <RuntimeDependencies>
-            <Dependency>mit-kerberos</Dependency>
+            <Dependency>mit-kerberos-libs</Dependency>
             <Dependency versionFrom="5.10.1">perl</Dependency>
         </RuntimeDependencies>
         <Replaces>
@@ -35,6 +35,13 @@
     </Package>
 
     <History>
+        <Update release="9">
+            <Date>2010-11-23</Date>
+            <Version>0.28</Version>
+            <Comment>Fix dependency name.</Comment>
+            <Name>Ozan Çağlayan</Name>
+            <Email>ozan@pardus.org.tr</Email>
+        </Update>
         <Update release="8">
             <Date>2010-10-26</Date>
             <Version>0.28</Version>
