--- a/programming/language/php/php/pspec.xml
+++ b/programming/language/php/php/pspec.xml
@@ -21,8 +21,8 @@
             <Dependency>libxslt</Dependency>
             <Dependency>mysql-lib</Dependency>
             <Dependency>libmcrypt</Dependency>
-            <Dependency>mit-kerberos</Dependency>
             <Dependency>postgresql-server</Dependency>
+            <Dependency>mit-kerberos-devel</Dependency>
         </BuildDependencies>
         <Patches>
             <Patch>php5-imap-symlink.diff</Patch>
@@ -52,8 +52,8 @@
             <Dependency>mysql-lib</Dependency>
             <Dependency>libmcrypt</Dependency>
             <Dependency>php-common</Dependency>
-            <Dependency>mit-kerberos</Dependency>
             <Dependency>postgresql-lib</Dependency>
+            <Dependency>mit-kerberos-libs</Dependency>
         </RuntimeDependencies>
         <Files>
             <Path fileType="executable">/usr/bin</Path>
@@ -72,17 +72,17 @@
         <Name>mod_php</Name>
         <PartOf>server.web</PartOf>
         <RuntimeDependencies>
+            <Dependency>gd</Dependency>
             <Dependency>apache</Dependency>
             <Dependency>libxml2</Dependency>
-            <Dependency>mysql-lib</Dependency>
-            <Dependency>postgresql-lib</Dependency>
-            <Dependency>gd</Dependency>
             <Dependency>libxslt</Dependency>
-            <Dependency>mit-kerberos</Dependency>
-            <Dependency>openldap-client</Dependency>
-            <Dependency>cyrus-sasl</Dependency>
-            <Dependency>php-common</Dependency>
             <Dependency>libmcrypt</Dependency>
+            <Dependency>mysql-lib</Dependency>
+            <Dependency>php-common</Dependency>
+            <Dependency>cyrus-sasl</Dependency>
+            <Dependency>postgresql-lib</Dependency>
+            <Dependency>openldap-client</Dependency>
+            <Dependency>mit-kerberos-libs</Dependency>
         </RuntimeDependencies>
         <Files>
             <Path fileType="library">/usr/lib/apache2/modules/libphp5.so</Path>
@@ -97,6 +97,13 @@
     </Package>
 
     <History>
+        <Update release="81">
+            <Date>2010-11-23</Date>
+            <Version>5.2.14</Version>
+            <Comment>Fix dependency name.</Comment>
+            <Name>Ozan Çağlayan</Name>
+            <Email>ozan@pardus.org.tr</Email>
+        </Update>
         <Update release="80">
             <Date>2010-10-26</Date>
             <Version>5.2.14</Version>
