--- a/programming/language/python/python-networkmanager/pspec.xml
+++ b/programming/language/python/python-networkmanager/pspec.xml
@@ -23,11 +23,22 @@
         <Files>
             <Path fileType="library">/usr/lib/python*</Path>
             <Path fileType="executable">/usr/bin</Path>
+            <Path fileType="executable">/bin</Path>
             <Path fileType="data">/etc/bash_completion.d</Path>
         </Files>
+        <AdditionalFiles>
+            <AdditionalFile owner="root" permission="0755" target="/bin/network">network-cli</AdditionalFile>
+        </AdditionalFiles>
     </Package>
 
     <History>
+        <Update release="5">
+            <Date>2010-12-02</Date>
+            <Version>0.0_20101021</Version>
+            <Comment>Add Doruk Altan's network cli script.</Comment>
+            <Name>Ozan Çağlayan</Name>
+            <Email>ozan@pardus.org.tr</Email>
+        </Update>
         <Update release="4">
             <Date>2010-10-26</Date>
             <Version>0.0_20101021</Version>
