fix script name

--- a/corporate2/devel/programming/language/python/python-networkmanager/pspec.xml
+++ b/corporate2/devel/programming/language/python/python-networkmanager/pspec.xml
@@ -27,7 +27,7 @@
             <Path fileType="data">/etc/bash_completion.d</Path>
         </Files>
         <AdditionalFiles>
-            <AdditionalFile owner="root" permission="0755" target="/bin/network">network-cli</AdditionalFile>
+            <AdditionalFile owner="root" permission="0755" target="/bin/network">network</AdditionalFile>
         </AdditionalFiles>
     </Package>
 
