--- a/programming/language/python/scipy/pspec.xml
+++ b/programming/language/python/scipy/pspec.xml
@@ -19,7 +19,7 @@
             <Dependency>lapack</Dependency>
             <Dependency>blas</Dependency>
             <Dependency>fftw3</Dependency>
-            <Dependency>SuiteSparse</Dependency>
+            <Dependency versionFrom="3.5.0">SuiteSparse</Dependency>
         </BuildDependencies>
         <Patches>
             <Patch>handle-docs.patch</Patch>
@@ -37,7 +37,7 @@
             <Dependency>lapack</Dependency>
             <Dependency>blas</Dependency>
             <Dependency>fftw3</Dependency>
-            <Dependency>SuiteSparse</Dependency>
+            <Dependency versionFrom="3.5.0">SuiteSparse</Dependency>
         </RuntimeDependencies>
         <Files>
             <Path fileType="library">/usr/lib</Path>
@@ -46,6 +46,13 @@
     </Package>
 
     <History>
+       <Update release="5">
+            <Date>2010-12-07</Date>
+            <Version>0.7.1</Version>
+            <Comment>Write strict dep to new SuiteSparse</Comment>
+            <Name>Metin Akdere</Name>
+            <Email>metin@pardus.org.tr</Email>
+       </Update>
         <Update release="4">
             <Date>2010-10-26</Date>
             <Version>0.7.1</Version>
