--- a/corporate2/devel/programming/language/php/php/pspec.xml
+++ b/corporate2/devel/programming/language/php/php/pspec.xml
@@ -5,8 +5,8 @@
         <Name>php</Name>
         <Homepage>http://www.php.net</Homepage>
         <Packager>
-            <Name>Pardus</Name>
-            <Email>admins@pardus.org.tr</Email>
+            <Name>Gökhan Özbulak</Name>
+            <Email>gozbulak@pardus.org.tr</Email>
         </Packager>
         <License>PHP</License>
         <IsA>library</IsA>
